# poetry-import-plugin

./: .gitattribute  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .releaserc.json  404.html  LICENSE  Makefile  README.md  command.py  index.html  makefile  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature_request.yml  security.yml
.github/workflows/: main.yml  pre-commit.yml  publish.yml  publishrc.yml  pull-request.yml  release.yml  reusable-sr.yml  run-pytests.yml  versioning.yml
docs/: Makefile  index.md  make.bat  sitemap.xml
docs/source/: conf.py  index.rst
docs/src/: extra.css
poetry_import/: __init__.py  backport.py  command.py
req2toml/: __init__.py  console.py  utils.py
search/: search_index.json
tests/: .coveragerc  conftest.py  mixin.py  test_command.py  test_read_requirements.py  test_toml_at_root.py
tests/fixtures/: pyproject.py  pyproject.toml  requirements.txt  tmp_project.py
