[tool.poetry]
name = "req2toml"
version = "1.2.0"
description = "Convert requirements.txt to pyproject.toml"
authors = ["Ben Chen <benbenbang@github.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/benbenbang/req2toml"
keywords = ["poetry", "pyproject", "toml", "requirements", "convert"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.scripts]
req2lock = 'req2toml.console:cli'

[tool.poetry.dependencies]
python = "^3.6.1"
click = "7.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"
pytest = "^6.1.2"
twine = "^3.2.0"
Sphinx = "^3.4.1"
sphinxcontrib-napoleon = "^0.7"
sphinx-rtd-theme = "^0.5.0"
sphinx-theme = "^1.0"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
