[tool.poetry]
name = "poetry-import-plugin"
version = "1.0.0"
description = "test fixture"
authors = ["benbenbang <bn@bitbrew.dev>"]
readme = "README.md"
packages = [{ include = "poetry_import_plugin" }]

[tool.poetry.dependencies]
python = "^3.12"
apache-airflow = { version = "2.9.3", extras = [
    "crypto",
    "password",
    "statsd",
] }
apache-airflow-providers-amazon = "==8.25.0"
apache-airflow-providers-celery = "==3.7.2"
apache-airflow-providers-common-io = "==1.3.2"
apache-airflow-providers-common-sql = "==1.14.2"
apache-airflow-providers-docker = "==3.12.2"
apache-airflow-providers-google = "==10.21.0"
apache-airflow-providers-http = "==4.12.0"
apache-airflow-providers-jdbc = "==4.3.1"
apache-airflow-providers-openai = "==1.2.2"
apache-airflow-providers-postgres = "==5.11.2"
apache-airflow-providers-slack = "==8.7.1"
apache-airflow-providers-smtp = "==1.7.1"
apache-airflow-providers-ssh = "==3.11.2"
flask-providers-session = ">=0.4.1"
ics = ">=0.7.2"
orjson = ">=3.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
